--- a/Frontend/Views/homepage.ejs
+++ b/Frontend/Views/homepage.ejs
@@ -57,7 +57,7 @@
             <input type="password" placeholder="Enter Password" name="psw" required>
 
             <button type="submit" class="btn">Login</button><br></br>
-            <button type="button" class="btn google" onclick="googlelogin()"><i class="fab fa-google fa-1x"
+            <button type="button" class="btn google" href="/google"><i class="fab fa-google fa-1x"
                     style="padding: 2px;"></i>
                 Continue
                 with google</button>
